# lioshi-icon-theme

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  lioshi-icon-theme.doap  lioshi-icon-theme.spec
Lioshi/: index.theme
Lioshi/cursors/: X_cursor  all-scroll  bd_double_arrow  bottom_left_corner  bottom_right_corner  bottom_side  bottom_tee  circle  copy  cross  crossed_circle  dnd-ask  dnd-copy  dnd-link  dnd-move  dnd-none  dotbox  fd_double_arrow  grabbing  hand2  left_ptr  left_ptr_watch  left_side  left_tee  link  ll_angle  lr_angle  move  pencil  plus  pointer-move  question_arrow  right_ptr  right_side  right_tee  sb_down_arrow  sb_h_double_arrow  sb_left_arrow  sb_right_arrow  sb_up_arrow  (+13 more)
Paper/: cursor.theme
Paper-Mono-Dark/: index.theme
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: README.md  extract-dark-panel-icons.rb  extract-panel-icons.rb  extract-symbolic-app-icons.rb  extract-symbolic-icons.rb  extract-vector-icons.rb  paper_palette.gpl  render-bitmaps.py
src/cursors/bitmaps/: make.sh
